cmake_host_system_information: query windows registry

Fixes: #21240, #23367